testData/inspections/string-assigned-to-nil/assignment.go
package main

func main() {
	var var1, var2, var3 string;
	var1, var2, var3 = "nil", <error descr="String cannot be nil"><caret>nil</error>, "text"
}
